--- a/homepage.html
+++ b/homepage.html
@@ -7,35 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./stylesheet.css">
-
 </head>
 
 <body>
     <section>
         <div class="container">
             <img src="./pictures/homepage.png" alt="homepage" usemap="#type-letters">
-            <map name="type-letters">
+            <!-- <map name="type-letters">
                 <area shape="circle" coords="417,866,20" alt="a" title="artwork" onmouseover="toolTip(this)"
                     onmouseout="toolTipHide(this)" class="tooltip" href="artworks_btn">
                 <area shape="circle" coords="514,907,20" alt="c" href="./contactme.html">
                 <area shape="circle" coords="787,827,20" alt="p" href="./projects.html">
                 <area shape="circle" coords="694,905,20" alt="m" href="./aboutme.html">
-            </map>
-            <div class="all_tooltips">
+            </map> -->
+            <div class="all-tooltip">
                 <div class="tooltip tooltip_a">
-                    <div class="pin">
-                        <div class="tooltip-content">
-                            <div class="content">
-                                <h3>A for Artwork</h3>
-                                <p>Hello</p>
-                            </div>
+                    <div class="pin"></div>
+                    <div class="tooltip-content">
+                        <div class="content">
+                            <h3>A for Artwork</h3>
+                            <p> <a href="./artworks.html">Find out more </a> about the artworks I did with Photoshop and
+                                Procreate </a> </p>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <!-- <div class="tooltip tooltip_c">
+                <div class="pin"></div>
+                <div class="tooltip-content">
+                    <div class="content">
+                        <h3> C for contact me </h3>
+                        <p> <a href="./contactme.html">Find out more </a> about how to reach me! </a> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="tooltip tooltip_p">
+            <div class="pin"></div>
+            <div class="tooltip-content">
+                <div class="content">
+                    <h3> P for projects </h3>
+                    <p> <a href="./projects.html">Find out more </a> about previous projects(web design/3D models/UI,UX
+                        design...) </a> </p>
+                </div>
+            </div>
+        </div> -->
+        </div>
         </div>
     </section>
     <script src="./app.js"></script>
 </body>
+
 </html>
