--- a/test.html
+++ b/test.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +7,99 @@
     <title>Document</title>
     <link rel="stylesheet" href="./test.css">
 </head>
-
-<body>
-    <main>
-        <img src="./pictures/homepage.png" alt="homepage" usemap="#type-letters">
-        <map name="type-letters">
-            <area shape="circle" coords="417,866,20" alt="a" data-tooltip="Tooltip for A" href="artworks_btn">
-            <area shape="circle" coords="514,907,20" alt="c" href="./contactme.html">
-            <area shape="circle" coords="787,827,20" alt="p" href="./projects.html">
-            <area shape="circle" coords="694,905,20" alt="m" href="./aboutme.html">
-        </map>
-    </main>
-
-    <script src="./test.js"></script>
+<section>
+    <div class="container">
+        <img src="./pictures/homepage.png" alt="homepage">
+      <div class="all-tooltip">
+        <div class=" tooltip tooltip-1">
+          <div class="pin">
+            <ion-icon name="add-circle"></ion-icon>
+          </div>
+          <div class="tooltip-content">
+            <div class="arrow"></div>
+            <div class="content">
+              <h1>C for contact me</h1>
+              <p><a href="./contactme.html"><b>Find out more </b> </a> about the contact information!</p>
+            </div>
+          </div>
+        </div>
+        <div class="tooltip tooltip-2">
+          <div class="pin"></div>
+          <div class="tooltip-content">
+            <div class="arrow"></div>
+            <div class="content">
+              <h1>"A" for Artworks</h1>
+              <p><a href="./artworks.html"> <b>Find out more</b> </a> about the artworks I made using Photoshop and Procreate!</p>
+            </div>
+          </div>
+        </div>
+        <div class="tooltip tooltip-3">
+          <div class="pin"></div>
+          <div class="tooltip-content">
+            <div class="arrow"></div>
+            <div class="content">
+                <h1>"P" for Previous projects</h1>
+                <p><a href="./projects.html"> <b>Find out more </b></a> about the previous project I made 
+                    (Unity games /
+                    Web Designs / 
+                    UX & UI / 
+                    3D Modelings...)</p>
+            </div>
+          </div>
+        </div>
+        <div class="tooltip tooltip-4">
+          <div class="pin"></div>
+          <div class="tooltip-content">
+            <div class="arrow"></div>
+            <div class="content">
+                <h1>"M" for More about me</h1>
+                <p><a href="./aboutme.html"> <b>Find out more </b></a> about who I am, what I'm like, my education background and my past experience.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <!-- *******************   -->
+  <!--  !!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+  <!--  This Code is for only the floating card in right bottom corner -->
+  <!-- ********************  -->
+  
+  <div id="webCifar-sidebox">
+    <div id="webCifar">
+      <h2 class="logo">Web Cifar</h2>
+      <p class="author">Coded By <span>Shaif Arfan</span> </p>
+      <div class="items">
+        <a href="https://www.youtube.com/channel/UCdxaLo9ALJgXgOUDURRPGiQ" target="_blank" class="item youtubeLink">
+          <svg title="watch how we made this" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+            <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+          </svg>
+          <p>Watch how we made this.
+          </p>
+        </a>
+        <a href="https://webcifar.com" target="_blank" class="item">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+          </svg>
+          <p>https://webcifar.com</p>
+        </a>
+  
+      </div>
+      <div class="close">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd" />
+        </svg>
+      </div>
+    <!-- </div>
+    <div id="webCifar-icon">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+      <p>Info About the pen</p>
+    </div> -->
+  </div>
+  <script src="./test.js"></script>
 </body>
-
 </html>
